--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,9 @@ services:
       - "4222:4222" # 4222 is for clients.
       - "8222:8222" # 8222 is an HTTP management port for information reporting.
       - "6222:6222" # 6222 is a routing port for clustering.
-    command: "--jetstream"
+    volumes:
+      - "nats-persistence:/data"
+    command: "--jetstream --store_dir=/data"
 
   fullfeedrss:
     image: "heussd/fivefilters-full-text-rss:latest"
@@ -53,6 +55,8 @@ services:
 
 volumes:
   rss-cache:
+  nats-persistence:
+
 
 secrets:
   POCKET_ACCESS_TOKEN:
