--- a/rss-article-url-feeder/docker-compose.yml
+++ b/rss-article-url-feeder/docker-compose.yml
@@ -5,14 +5,11 @@ services:
       - "4222:4222" # 4222 is for clients.
       - "8222:8222" # 8222 is an HTTP management port for information reporting.
       - "6222:6222" # 6222 is a routing port for clustering.
-    command: "--jetstream --store_dir=/data"
+    command: "--jetstream --store_dir /data"
     volumes:
-      - "nats-persistence:/data"
+      - "./nats-persistence:/data"
   nats-rss-article-url-feeder:
     image: ghcr.io/heussd/nats-rss-article-url-feeder
     build: .
     environment:
       - "NATS_SERVER=nats-server:4222"
-
-volumes:
-  nats-persistence:
