--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   nats-server:
-    image: nats:2.8
+    image: docker.io/nats:2.8
     ports:
       - "4222:4222" # 4222 is for clients.
       - "8222:8222" # 8222 is an HTTP management port for information reporting.
@@ -18,7 +18,7 @@ services:
       - "rss-cache:/var/www/html/cache"
 
   nats-rss-article-url-feeder:
-    image: ghcr.io/heussd/nats-rss-article-url-feeder
+    image: ghcr.io/heussd/nats-rss-article-url-feeder:main
     volumes:
       - type: bind
         source: ./urls.txt
@@ -28,9 +28,11 @@ services:
     environment:
       - "NATS_SERVER=nats-server:4222"
       - "URLS=/urls.txt"
+    deploy:
+      replicas: 2
 
   nats-news-keyword-matcher:
-    image: ghrc.io/heussd/nats-news-keyword-matcher
+    image: ghrc.io/heussd/nats-news-keyword-matcher:latest
     volumes:
       - type: bind
         source: ./keywords.txt
@@ -45,7 +47,7 @@ services:
       replicas: 14
 
   nats-pocket-integration:
-    image: ghcr.io/heussd/nats-pocket-integration
+    image: ghcr.io/heussd/nats-pocket-integration:main
     environment:
       - "NATS_SERVER=nats-server:4222"
     secrets:
