--- a/keyword-matcher-go/docker-compose.yml
+++ b/keyword-matcher-go/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.7"
 
 services:
   nats-news-keyword-matcher-go:
-    image: ghrc.io/heussd/nats-news-keyword-matcher-go
+    image: ghrc.io/heussd/nats-news-keyword-matcher-go:main
     build: .
     volumes:
       - type: bind
@@ -13,6 +13,7 @@ services:
     environment:
       - "KEYWORDS_FILE:/keywords.txt"
       - "NATS_SERVER=nats-server:4222"
+      - "FULLTEXTRSS_SERVER=http://fullfeedrss:80"
   nats-server:
     image: nats:2.8
     ports:
