--- a/pocket-integration/docker-compose.yml
+++ b/pocket-integration/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       - "8222:8222" # 8222 is an HTTP management port for information reporting.
       - "6222:6222" # 6222 is a routing port for clustering.
   nats-pocket-integration:
-    image: ghcr.io/heussd/nats-pocket-integration
+    image: ghcr.io/heussd/nats-pocket-integration:main
     build: .
     environment:
       - "NATS_SERVER=nats-server:4222"
