--- a/docker-compose.build.yml
+++ b/docker-compose.build.yml
@@ -12,6 +12,8 @@ services:
     image: ghcr.io/heussd/nats-news-analysis/rss-article-url-feeder-python
     build:
       context: rss-article-url-feeder-python/.
+      cache_from:
+        - ghcr.io/heussd/nats-news-analysis/rss-article-url-feeder-python
       x-bake:
         platforms:
           - linux/amd64
@@ -30,6 +32,8 @@ services:
     image: ghcr.io/heussd/nats-news-analysis/keyword-matcher-python
     build:
       context: keyword-matcher-python/.
+      cache_from:
+        - ghcr.io/heussd/nats-news-analysis/keyword-matcher-python
       x-bake:
         platforms:
           - linux/amd64
@@ -39,6 +43,8 @@ services:
     image: ghcr.io/heussd/nats-news-analysis/pocket-integration
     build:
       context: pocket-integration/.
+      cache_from:
+        - ghcr.io/heussd/nats-news-analysis/pocket-integration
       x-bake:
         platforms:
           - linux/amd64
