Divide URLs in primary and secondary

--- a/docker-compose.build.yml
+++ b/docker-compose.build.yml
@@ -1,6 +1,6 @@
 services:   
   rss-article-url-feeder-go:
-    image: ghcr.io/heussd/nats-news-analysis/rss-article-url-feeder-go
+    image: ghcr.io/heussd/nats-news-analysis/rss-article-url-feeder-go:latest
     build:
       context: rss-article-url-feeder-go/.
       x-bake:
