--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,12 +29,27 @@ services:
     ports:
         - '80:80'
 
-  rss-article-url-feeder-go:
+  rss-article-url-feeder-go-1st:
     scale: 1
-    image: ghcr.io/heussd/nats-news-analysis/rss-article-url-feeder-go
+    image: ghcr.io/heussd/nats-news-analysis/rss-article-url-feeder-go:latest
     volumes:
       - type: bind
-        source: ./urls.txt
+        source: ./urls-primary.txt
+        target: /urls.txt
+        consistency: cached
+        read_only: true
+    environment:
+      - "NATS_SERVER=nats-server:4222"
+      - "URLS=/urls.txt"
+    restart: always
+
+
+  rss-article-url-feeder-go-2nd:
+    scale: 1
+    image: ghcr.io/heussd/nats-news-analysis/rss-article-url-feeder-go:latest
+    volumes:
+      - type: bind
+        source: ./urls-secondary.txt
         target: /urls.txt
         consistency: cached
         read_only: true
