--- a/grafana/grafana-datasources.yml
+++ b/grafana/grafana-datasources.yml
@@ -8,3 +8,11 @@ datasources:
     version: 1
     editable: false
     isDefault: true
+  - name: Prometheus
+    type: prometheus
+    access: proxy
+    orgId: 1
+    url: 'http://prometheus:9090'
+    isDefault: false
+    version: 1
+    editable: true
