--- a/keyword-matcher-python/docker-compose.yml
+++ b/keyword-matcher-python/docker-compose.yml
@@ -6,12 +6,13 @@ services:
     build: .
     volumes:
       - type: bind
-        source: ./keywords.txt
+        source: ./tests/keywords.txt
         target: /keywords.txt
         consistency: cached
         read_only: true
     environment:
       - "KEYWORDS_FILE:/keywords.txt"
+      - "FULLTEXTRSS_SERVER=http://fullfeedrss"
       - "NATS_SERVER=nats-server:4222"
   nats-server:
     image: nats:2.8
@@ -27,3 +28,15 @@ services:
       - FTR_ADMIN_PASSWORD=
     ports:
       - "80:80"
+  rss-article-url-feeder-go:
+    image: ghcr.io/heussd/nats-news-analysis/rss-article-url-feeder-go:latest
+    volumes:
+      - type: bind
+        source: ./urls.txt
+        target: /urls.txt
+        consistency: cached
+        read_only: true
+    environment:
+      - "NATS_SERVER=nats-server:4222"
+      - "URLS=/urls.txt"
+    restart: always
