--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,8 @@ services:
     command: "--jetstream --http_port 8222 --store_dir /data"
   fullfeedrss:
     image: docker.io/heussd/fivefilters-full-text-rss:latest
-    scale: 2
+    deploy:
+      replicas: 2
     environment:
       # Leave empty to disable admin section
       - FTR_ADMIN_PASSWORD=
@@ -109,7 +110,8 @@ services:
       - "NATS_SERVER=nats-server:4222"
       - "FULLTEXTRSS_SERVER=http://loadbalancer:80"
   keyword-matcher-go:
-    scale: 4
+    deploy:
+      replicas: 4
     <<: *loki
     image: ghcr.io/heussd/nats-news-analysis/keyword-matcher-go:latest
     build:
