--- a/.github/workflows/docker-build-and-push.yml
+++ b/.github/workflows/docker-build-and-push.yml
@@ -1,41 +1,35 @@
 name: Docker build & push
 
 on:
-  push:
-    branches:
-      - 'main'
-    paths-ignore:
-      - '**.md'
-      - 'docker-compose.yml'
-      - 'architecture.drawio'
-      - 'architecture.drawio.svg'
-      - '**.png'
+    push:
+        branches:
+            - 'main'
+        paths-ignore:
+            - '**.md'
+            - 'architecture.drawio'
+            - 'architecture.drawio.svg'
+            - '**.png'
 jobs:
-  bake:
-    runs-on: ubuntu-latest
-    steps:
-      -
-        name: Checkout
-        uses: actions/checkout@v3
-      -
-        # Add support for more platforms with QEMU (optional)
-        # https://github.com/docker/setup-qemu-action
-        name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      -
-        name: Log in to the GitHub Container registry
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      -
-        name: Build and push
-        uses: docker/bake-action@v2
-        with:
-          files: |
-            "docker-compose.yml"
-          push: true
+    bake:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v3
+            - # Add support for more platforms with QEMU (optional)
+              # https://github.com/docker/setup-qemu-action
+              name: Set up QEMU
+              uses: docker/setup-qemu-action@v2
+            - name: Set up Docker Buildx
+              uses: docker/setup-buildx-action@v2
+            - name: Log in to the GitHub Container registry
+              uses: docker/login-action@v2
+              with:
+                  registry: ghcr.io
+                  username: ${{ github.actor }}
+                  password: ${{ secrets.GITHUB_TOKEN }}
+            - name: Build and push
+              uses: docker/bake-action@v2
+              with:
+                  files: |
+                      "compose.yml"
+                  push: true
