--- a/rss-article-url-feeder-go/compose.yml
+++ b/rss-article-url-feeder-go/compose.yml
@@ -1,19 +1,17 @@
-version: "3.7"
-
 services:
   rss-article-url-feeder-go:
     image: ghcr.io/heussd/rss-article-url-feeder-go:main
     build: .
     volumes:
       - type: bind
-        source: ./internal/urls/urls.txt
+        source: urls.txt
         target: /urls.txt
         consistency: cached
         read_only: true
     environment:
       - "NATS_SERVER=nats-server:4222"
   nats-server:
-    image: nats:2.8
+    image: nats:2.10
     ports:
       - "4222:4222" # 4222 is for clients.
       - "8222:8222" # 8222 is an HTTP management port for information reporting.
