--- a/keyword-matcher-go/Dockerfile
+++ b/keyword-matcher-go/Dockerfile
@@ -14,7 +14,13 @@ COPY cmd ./cmd
 RUN CGO_ENABLED=0 go build -a -ldflags '-s' -o goapp.bin ./cmd
 
 
+# https://github.com/drone/ca-certs/blob/master/Dockerfile
+FROM alpine:3.6 as alpine
+RUN apk add -U --no-cache ca-certificates
+
+
 FROM scratch
+COPY --from=alpine /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
 COPY --from=builder /app/goapp.bin /goapp.bin
 
 CMD [ "./goapp.bin" ]
